third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/leading-zero-2.stderr
TOML parse error at line 1, column 19
  |
1 | leading-zero-2 = 00
  |                   ^
expected newline, `#`
